// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Todo GraphQL AddTodo 1`] = `
Object {
  "data": Object {
    "addUser": null,
  },
  "errors": Array [
    Object {
      "message": "internal system error",
      "path": Array [
        "addUser",
      ],
    },
  ],
}
`;

exports[`Testing Todo GraphQL AddTodo 2`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "1",
      "todoEdge": Object {
        "cursor": "NDc=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzo0Nw==",
          "text": "Get a customer 2",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "test@test.com",
        "totalCount": 2,
      },
    },
  },
}
`;

exports[`Testing Todo GraphQL AddTodo 3`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "1",
      "todoEdge": Object {
        "cursor": "NDg=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzo0OA==",
          "text": "Get a customer 3",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "test@test.com",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Testing Todo GraphQL AddTodo 4`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "1",
      "todoEdge": Object {
        "cursor": "Ng==",
        "node": Object {
          "complete": false,
          "id": "VG9kbzo2",
          "text": "Get a customer 3",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "test0@test.com",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Testing Todo GraphQL ChangeTodoStatus 1`] = `
Object {
  "data": Object {
    "addUser": null,
  },
  "errors": Array [
    Object {
      "message": "internal system error",
      "path": Array [
        "addUser",
      ],
    },
  ],
}
`;

exports[`Testing Todo GraphQL ChangeTodoStatus 2`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "4",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzo0Nw==",
        "text": "",
      },
      "user": Object {
        "completedCount": 0,
        "email": "test@test.com",
        "id": "VXNlcjoy",
        "totalCount": 0,
      },
    },
  },
}
`;

exports[`Testing Todo GraphQL ChangeTodoStatus 3`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "4",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzo0OA==",
        "text": "",
      },
      "user": Object {
        "completedCount": 0,
        "email": "test@test.com",
        "id": "VXNlcjoy",
        "totalCount": 0,
      },
    },
  },
}
`;

exports[`Testing Todo GraphQL ClearCompletedTodos 1`] = `
Object {
  "data": Object {
    "addUser": null,
  },
  "errors": Array [
    Object {
      "message": "internal system error",
      "path": Array [
        "addUser",
      ],
    },
  ],
}
`;

exports[`Testing Todo GraphQL MarkAllTodos 1`] = `
Object {
  "data": Object {
    "addUser": null,
  },
  "errors": Array [
    Object {
      "message": "internal system error",
      "path": Array [
        "addUser",
      ],
    },
  ],
}
`;
